envoyfilter-teaching/envoyfilter/cluster/cluster-starttls-downstream.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: cluster
  namespace: istio-system 
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: CLUSTER
    match:   
      cluster:
        name: outbound|9080||productpage.istio.svc.cluster.local
    patch:
      operation: REMOVE
  - applyTo: CLUSTER
    patch:
      operation: ADD     
      value:
          type: EDS
          circuitBreakers:
            thresholds:
            - maxConnections: 4294967295
              maxPendingRequests: 4294967295
              maxRequests: 4294967295
              maxRetries: 4294967295
              trackRemaining: true
          connectTimeout: 10s
          edsClusterConfig:
            edsConfig:
              ads: {}
              initialFetchTimeout: 0s
              resourceApiVersion: V3
            serviceName: outbound|9080||productpage.istio.svc.cluster.local
          filters:
          - name: istio.metadata_exchange
            typedConfig:
              '@type': type.googleapis.com/udpa.type.v1.TypedStruct
              typeUrl: type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
              value:
                protocol: istio-peer-exchange
          metadata:
            filterMetadata:
              istio:
                default_original_port: 9080
                services:
                - host: productpage.istio.svc.cluster.local
                  name: productpage
                  namespace: istio
          name: outbound|9080||productpage.istio.svc.cluster.local
          transportSocketMatches:
          - match: {}
            name: tlsMode-startTls
            transportSocket:
              name: envoy.transport_sockets.starttls
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.transport_sockets.starttls.v3.UpstreamStartTlsConfig
                cleartext_socket_config: {}
                tls_socket_config:
                    common_tls_context:
                      combinedValidationContext:
                        defaultValidationContext:
                          matchSubjectAltNames:
                          - exact: spiffe://cluster.local/ns/istio/sa/bookinfo-productpage
                        validationContextSdsSecretConfig:
                          name: ROOTCA
                          sdsConfig:
                            apiConfigSource:
                              apiType: GRPC
                              grpcServices:
                              - envoyGrpc:
                                  clusterName: sds-grpc
                              setNodeOnFirstMessageOnly: true
                              transportApiVersion: V3
                            initialFetchTimeout: 0s
                            resourceApiVersion: V3
                      tlsCertificateSdsSecretConfigs:
                      - name: default
                        sdsConfig:
                          apiConfigSource:
                            apiType: GRPC
                            grpcServices:
                            - envoyGrpc:
                                clusterName: sds-grpc
                            setNodeOnFirstMessageOnly: true
                            transportApiVersion: V3
                          initialFetchTimeout: 0s
                          resourceApiVersion: V3
                    sni: outbound_.9080_._.productpage.istio.svc.cluster.local
